Change 'show all' from menu to checkbox
Add update now to menu
Filter route for predictions in BusTimeAPI instead of provider, saves
some network traffic

--- a/res/menu/prediction.xml
+++ b/res/menu/prediction.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu
   xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:id="@+id/prediction_showall" android:title="@string/menu_showall"></item>
+<item android:id="@+id/prediction_update" android:title="@string/menu_update" android:icon="@android:drawable/ic_input_get" />
 </menu>
