--- a/res/layout/stop_predictions.xml
+++ b/res/layout/stop_predictions.xml
@@ -9,6 +9,9 @@
 	<TextView android:id="@+id/txt_stop_dir" android:layout_width="fill_parent"
 		android:layout_height="wrap_content" android:gravity="center_horizontal"
 		android:layout_centerInParent="true" android:textAppearance="?android:attr/textAppearanceLarge" />
+	<CheckBox android:id="@+id/predictions_showall" android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:text="@string/prediction_showall_toggle" />
 	<ListView android:id="@id/android:list" android:layout_width="fill_parent"
 		android:layout_height="wrap_content" />
 	<TextView android:id="@+id/txt_stop_error"
