Added Pref to control update frequency

--- a/res/menu/prediction.xml
+++ b/res/menu/prediction.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-  xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:id="@+id/prediction_update" android:title="@string/menu_update" android:icon="@android:drawable/ic_input_get" />
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+	<item android:id="@+id/prediction_update" android:title="@string/menu_update"
+		android:icon="@android:drawable/ic_input_get" />
+	<item android:id="@+id/prediction_prefs" android:title="@string/menu_prefs"
+		android:icon="@android:drawable/ic_menu_preferences" />
 </menu>
