--- a/res/layout/route_list_item.xml
+++ b/res/layout/route_list_item.xml
@@ -17,8 +17,8 @@
 -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
-	android:paddingTop="2dip"
-	android:paddingBottom="2dip"
+	android:paddingTop="1dip"
+	android:paddingBottom="1dip"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:minHeight="?android:attr/listPreferredItemHeight"
@@ -28,13 +28,21 @@
 	<TextView android:id="@android:id/text1"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-        android:layout_marginRight="6dip"
+        android:layout_marginRight="6sp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
 	/>
+	
+	<View
+		android:layout_height="2sp"
+		android:layout_width="2sp"
+		android:background="#BBBBBBBB" 
+		android:layout_marginRight="6sp" />
 		
 	<TextView android:id="@android:id/text2"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
         android:layout_toRightOf="@android:id/text1"
+        android:textAppearance="?android:attr/textAppearanceLarge"
 	/>
 
 </LinearLayout>
