--- a/res/layout/routepicker.xml
+++ b/res/layout/routepicker.xml
@@ -4,7 +4,10 @@
 	android:orientation="vertical">
 	<Spinner android:id="@+id/system_spinner" android:layout_width="fill_parent"
 		android:layout_height="wrap_content" />
-		
+	<TextView android:id="@+id/txt_route_error"
+		android:layout_width="fill_parent" android:layout_height="wrap_content"
+		android:textAppearance="?android:attr/textAppearanceMedium" 
+		android:gravity="center_horizontal" android:visibility="gone" />
 	<ListView android:id="@id/android:list" android:layout_width="fill_parent"
 		android:layout_height="fill_parent" android:fastScrollEnabled="true"/>
 	<ListView android:id="@id/android:empty" android:layout_width="fill_parent"
