Add ability to clear cache from prefs
Moved Prefs to .prefs package

--- a/res/xml/prefs.xml
+++ b/res/xml/prefs.xml
@@ -5,4 +5,6 @@
 	android:title="@string/prefs_delay" android:key="update_delay"
 	android:inputType="number" android:defaultValue="60" 
 	android:numeric="integer" android:persistent="true" />
+
+<net.neoturbine.autolycus.prefs.ClearCachePreference />
 </PreferenceScreen>
