--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
   xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_width="wrap_content"
+  android:layout_height="wrap_content" >
+<LinearLayout
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:orientation="vertical" >
@@ -22,8 +25,18 @@
   <View
   	android:layout_width="fill_parent"
   	android:layout_height="40dip" />
+  <Button
+  	android:layout_width="fill_parent"
+  	android:layout_height="wrap_content"
+  	android:text="@string/about_button"
+  	android:onClick="addShortcut" />
+  <View
+  	android:layout_width="fill_parent"
+  	android:layout_height="40dip" />
   <TextView
   	android:layout_width="fill_parent"
-  	android:layout_height="fill_parent"
+  	android:layout_height="wrap_content"
   	android:text="@string/about_help" />
+  
 </LinearLayout>
+</ScrollView>
